# zephyr-params-manager

./: .gitignore  CMakeLists.txt  README.md  prj.conf  test_client.py
scripts/: generate_params.py
src/: main.cpp  mavlink_handler.cpp  mavlink_handler.hpp  module_params.hpp  param_manager.cpp  param_manager.hpp  param_schema.yaml
src/modules/test1/: module.yaml
src/modules/test2/: module.yaml
